--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,53 @@
 annotated-types==0.7.0
-anyio==4.5.2
+anyio
 bcrypt==4.3.0
 boto3==1.37.30
 botocore==1.37.30
+certifi==2025.1.31
 cffi==1.17.1
 click==8.1.8
 colorama==0.4.6
 cryptography==44.0.2
 dnspython==2.6.1
+distro==1.9.0
 ecdsa==0.19.1
 email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.12
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+jiter==0.9.0
 jmespath==1.0.1
+joblib==1.4.2
+lxml==5.3.1
+nltk==3.9.1
+openai==1.69.0
 passlib==1.7.4
+pdf2image==1.17.0
+pillow
 pyasn1==0.4.8
 pycparser==2.22
-pydantic==2.10.6
+pydantic
 pydantic-settings==2.8.1
-pydantic_core==2.27.2
+pydantic_core
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
+python-dotenv
 python-jose==3.4.0
 python-multipart==0.0.20
+python-pptx==1.0.2
+regex==2024.11.6
 rsa==4.9
 s3transfer==0.11.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 starlette==0.44.0
+tqdm==4.67.1
 typing_extensions==4.13.1
 urllib3==1.26.20
 uvicorn==0.33.0
+XlsxWriter==3.2.2
