--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,106 @@
 annotated-types==0.7.0
-anyio
+anyio==4.9.0
 bcrypt==4.3.0
+beautifulsoup4==4.13.4
+bidict==0.23.1
 boto3==1.37.30
 botocore==1.37.30
+bs4==0.0.2
 certifi==2025.1.31
 cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
+cmudict==1.0.32
 colorama==0.4.6
 cryptography==44.0.2
-dnspython==2.6.1
+Distance==0.1.3
 distro==1.9.0
+dnspython==2.6.1
 ecdsa==0.19.1
 email_validator==2.2.0
+emoji==1.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.12
+filelock==3.18.0
+fsspec==2025.3.2
 greenlet==3.1.1
 h11==0.14.0
+hangul-jamo==1.0.1
 httpcore==1.0.7
 httpx==0.28.1
+huggingface-hub==0.30.2
 idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+iniconfig==2.1.0
+jamo==0.4.1
+Jinja2==3.1.6
 jiter==0.9.0
 jmespath==1.0.1
 joblib==1.4.2
+kollocate==0.0.2
+koparadigm==0.10.0
+kss==6.0.4
+llvmlite==0.44.0
 lxml==5.3.1
+MarkupSafe==3.0.2
+more-itertools==10.7.0
+mpmath==1.3.0
+networkx==3.4.2
 nltk==3.9.1
+numba==0.61.2
+numpy==2.2.5
 openai==1.69.0
+openai-whisper @ git+https://github.com/openai/whisper.git@517a43ecd132a2089d85f4ebc044728a71d49f6e
+packaging==25.0
 passlib==1.7.4
 pdf2image==1.17.0
-pillow
+pecab==1.0.8
+pillow==11.2.1
+pluggy==1.5.0
+pyarrow==20.0.0
 pyasn1==0.4.8
 pycparser==2.22
-pydantic
+pydantic==2.11.3
 pydantic-settings==2.8.1
-pydantic_core
+pydantic_core==2.33.1
 PyMySQL==1.1.1
+pytest==8.3.5
 python-dateutil==2.9.0.post0
-python-dotenv
+python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
 python-pptx==1.0.2
+PyYAML==6.0
 regex==2024.11.6
+requests==2.32.3
 rsa==4.9
 s3transfer==0.11.4
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==4.1.0
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
 SQLAlchemy==2.0.40
 starlette==0.44.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tokenizers==0.21.1
+torch==2.7.0
+tossi==0.3.1
 tqdm==4.67.1
+transformers==4.51.3
+typing-inspection==0.4.0
 typing_extensions==4.13.1
+tzdata==2025.2
+Unidecode==1.4.0
 urllib3==1.26.20
 uvicorn==0.33.0
+Whoosh==2.7.4
+xlrd==1.2.0
 XlsxWriter==3.2.2
+yt-dlp==2025.3.31
+zipp==3.21.0
